Fix nav horizontal scroll z-index (#616)
* fix nav horizontal scroll z-index

* [autofix.ci] apply automated fixes

* Update CHANGELOG.md

---------

--- a/pdoc/templates/layout.css
+++ b/pdoc/templates/layout.css
@@ -124,7 +124,8 @@ nav.pdoc {
     padding: 0 0 0 var(--pad);
     overflow-wrap: anywhere;
     scrollbar-width: thin; /* Scrollbar width on Firefox */
-    scrollbar-color: var(--accent2) transparent /* Scrollbar color on Firefox */
+    scrollbar-color: var(--accent2) transparent; /* Scrollbar color on Firefox */
+    z-index: 1
 }
 
 nav.pdoc::-webkit-scrollbar {
